'fix video spacing on about page'

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -227,7 +227,7 @@ div.social-icon img {
 
 
 div.welcome-video-container {
-  width: 100%;
+  width: 60%;
   margin-left: 20%;
   margin-top: 4em;
   overflow: hidden;
